# design-pattern

./: README  decorator.tex  factory.tex  report_lab1.tex  report_lab2.tex  report_lab3.tex  talk.tex
code_lab1/: ObserverClient.java  SubjectStock.java  Test.java
code_lab1/abstraction/: ClientThresholdMapping.java  Observer.java  Subject.java
code_lab1/helper/: ClientThresholdMappingSelling.java  ClientThresholdMappingUpdating.java  StockThresholdMapping.java
code_lab1/test/: TestAmountPriceMapping.java
code_lab2/: Test.java
code_lab2/abstraction/: AbstractFactoryVendor.java  Checkable.java  Computer.java  FactoryCompany.java  Product.java  ProductDecorator.java
code_lab2/companies/: ComputerBase.java  LaptopCompany.java  PCCompany.java
code_lab3/: CMakeLists.txt  README  Test.cc
code_lab3/include/: abstract_command.h  abstract_device.h  abstract_read_command.h  abstract_write_command.h  dispatcher.h  headers.h
code_lab3/include/commands/: gpu_read.h  gpu_write.h  net_card_read.h  net_card_write.h  ram_read.h  ram_write.h  sound_card_read.h  sound_card_write.h
code_lab3/include/devices/: gpu.h  internet_card.h  ram.h  sound_card.h
code_lab3/src/: dispatcher.cc
code_lab3/src/commands/: gpu_read.cc  gpu_write.cc  net_card_read.cc  net_card_write.cc  ram_read.cc  ram_write.cc  sound_card_read.cc  sound_card_write.cc
code_lab3/src/devices/: gpu.cc  internet_card.cc  ram.cc  sound_card.cc
command/: README
decorator/: CypheringDecorator.java  PlainText.java  Test.java  Text.java
factory/: SaleStore.java  Test.java
singleton/: README
(+59 files in other folders)
